--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/contacts_list_graph">
 
@@ -21,6 +20,10 @@
     <navigation
         android:id="@+id/contact_info_graph"
         app:startDestination="@id/contact_info_fragment">
+
+        <argument
+            android:name="contactsData"
+            app:argType="com.example.generalmotorstest.data.models.Contacts" />
 
         <fragment
             android:id="@+id/contact_info_fragment"
